# PyBayesPINN

./: README.md
PyBayesPINN/: pyproject.toml
PyBayesPINN/pybayespinn/: __init__.py  bayesian.py  models.py  physics.py  utils.py
PyBayesPINN/tests/: test_basic.py
